--- a/Style/style.css
+++ b/Style/style.css
@@ -197,6 +197,8 @@ nav {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+
+    margin: 30px 0px;
     /* 162.5% */
 }
 
@@ -273,17 +275,18 @@ main {
 
 }
 
-.tour-title{
+.tour-title {
 
     color: #131318;
-text-align: left;
-font-family: Mulish;
-font-size: 2.5rem;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-margin-bottom: 30px;
+    text-align: left;
+    font-family: Mulish;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 30px;
 }
+
 .tour-content-box p {
 
     line-height: 35px;
@@ -297,16 +300,16 @@ margin-bottom: 30px;
 
 }
 
-.tour-content-box button{
+.tour-content-box button {
 
-border-radius: 8px;
-background: #FF5400;
-color: #FFF;
-text-align: center;
-font-size: 20px;
-font-weight: 800;
-width: 150px;
-margin-top: 30px;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    width: 150px;
+    margin-top: 30px;
 }
 
 
@@ -324,3 +327,124 @@ margin-top: 30px;
 }
 
 /* tour end  */
+
+/* <!-- Destination  secrion start--> */
+
+/* <!-- Destination  secrion end --> */
+
+
+.destination-section {
+    margin-top: 100px;
+
+}
+
+.destination-titll {
+
+    color: #131318;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.destination-section  p{
+
+    margin: 24px auto;
+    width: 60%;
+    }
+    
+
+.destination-section {
+    text-align: center;
+}
+
+
+
+.grid-box {
+
+    height: 250px;
+
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-box:hover {
+
+   transform: scale(1.03);
+
+}
+
+
+.grid-box h1{
+
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+text-shadow: 6px 3px 9px black;
+}
+
+
+
+.grid-container {
+    margin-top: 50px;
+
+    display: grid;
+    gap: 24px;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-areas:
+        "box1 box1 box1 box1 box1 box1 box2 box2 box2 box2 box2 box2 "
+        "box3 box3 box3 box3 box4 box4 box4 box4 box4 box5 box5 box5"
+        "box6 box6 box6 box6 box6 box7 box7 box7 box7 box7 box7 box7"
+    ;
+}
+
+#grid-box-1 {
+    grid-area: box1;
+    background: url(../Images/Rectangle\ 5.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-2 {
+    grid-area: box2;
+    background: url(../Images/Rectangle\ 6.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-3 {
+    grid-area: box3;
+    background: url(../Images/Rectangle\ 7.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-4 {
+    grid-area: box4;
+    background: url(../Images/Rectangle\ 8.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-5 {
+    grid-area: box5;
+    background: url(../Images/Rectangle\ 9.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-6 {
+    grid-area: box6;
+    background: url(../Images/Rectangle\ 10.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+
+#grid-box-7 {
+    grid-area: box7;
+    background: url(../Images/Rectangle\ 11.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background-blend-mode: multiply;
+}
+/* destination section end  */
