--- a/Style/style.css
+++ b/Style/style.css
@@ -47,7 +47,8 @@
     background: #FF5400;
 }
 
-button:hover {
+button,
+.primary-btn:hover {
 
     background: #c3490b;
 }
@@ -349,12 +350,12 @@ main {
     line-height: normal;
 }
 
-.destination-section  p{
+.destination-section p {
 
     margin: 24px auto;
     width: 60%;
-    }
-    
+}
+
 
 .destination-section {
     text-align: center;
@@ -374,21 +375,21 @@ main {
 
 .grid-box:hover {
 
-   transform: scale(1.03);
+    transform: scale(1.03);
 
 }
 
 
-.grid-box h1{
+.grid-box h1 {
 
     color: #FFF;
-text-align: center;
-font-family: Mulish;
-font-size: 28px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-text-shadow: 6px 3px 9px black;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    text-shadow: 6px 3px 9px black;
 }
 
 
@@ -447,4 +448,312 @@ text-shadow: 6px 3px 9px black;
     background: url(../Images/Rectangle\ 11.png) no-repeat center center/cover, linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
     background-blend-mode: multiply;
 }
+
 /* destination section end  */
+
+
+/* choose section start  */
+
+
+.choose-section {
+    margin-top: 100px;
+}
+
+.choose-title {
+    color: #131318;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+
+.ch-para {
+    text-align: center;
+    width: 80%;
+    margin: 24px auto;
+}
+
+.card-box-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.choose-upper-box {
+
+    display: flex;
+    gap: 25px;
+
+}
+
+.choose-lower-box {
+
+    display: flex;
+    justify-content: center;
+
+}
+
+
+
+
+.choose-card {
+    width: 50%;
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    padding: 32px;
+    text-align: left;
+}
+
+.choose-card h1 {
+    color: #131318;
+    text-align: left;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+
+.choose-card p {
+    text-align: left;
+
+}
+
+.choose-card img {
+
+    width: 64px;
+    height: 64px;
+}
+
+
+#card-1 {
+    background: rgba(251, 181, 99, 0.05);
+}
+
+#card-2 {
+    background: rgba(41, 206, 246, 0.05);
+}
+
+
+#card-3 {
+    background: rgba(233, 68, 68, 0.05);
+}
+
+
+
+/* choose section end  */
+
+
+/* demo-secrion start  */
+
+
+.demo-secrion {
+    margin-top: 100px;
+
+    display: flex;
+}
+
+.demo-content {
+
+    width: 40%;
+}
+
+.demo-content h1 {
+    color: #131318;
+
+    font-family: Mulish;
+    font-size: 2.2rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 40px;
+    /* 150% */
+    margin-bottom: 8px;
+
+}
+
+.demo-content li {
+
+    color: #131318;
+
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+    margin: 16px 0px;
+}
+
+.demo-content button {
+
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    margin: 25px 0px;
+
+    color: #FFF;
+
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+
+
+.demo-video {
+    width: 60%;
+
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid red 3px;
+}
+
+.demo-video video {
+    width: 100%;
+    border-radius: 16px;
+    height: 100%;
+}
+
+.demo-video h1 {
+
+
+    border-radius: 16px;
+    position: absolute;
+    top: 35%;
+    width: 50%;
+    color: #FFF;
+
+    text-align: center;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    /* 150% */
+    text-shadow: 4px 6px 4px black;
+    background-color: rgba(0, 0, 0, 0.157);
+    padding: 15px;
+
+
+}
+
+/* demo-secrion end  */
+
+
+
+/* latter section start  */
+
+.letter-sec {
+    margin-top: 100px;
+    display: flex;
+    gap: 24px;
+}
+
+.form-box {
+    width: 40%;
+    padding: 40px;
+
+    border: solid red 2px;
+    border-radius: 16px;
+}
+
+.form-box form {
+    border-top: solid 3px rgba(19, 19, 24, 0.10);
+
+
+}
+
+.form-box h1 {
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 16px;
+}
+
+.form-box p {
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+    margin-bottom: 24px;
+}
+
+.form-box input {
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    border: none;
+    margin-top: 24px;
+    padding: 16px;
+}
+
+form .submit-btn {
+
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.form-box form {
+    display: flex;
+    flex-direction: column;
+}
+
+.img-box {
+    width: 60%;
+    border-radius: 16px;
+    background: url('../Images/Rectangle\ 81.png '), lightgray 50% / cover no-repeat;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.img-tag{
+    width: 43%;
+    border-radius: 16px;
+background: #FF5400;
+transform: rotate(-19.628deg);
+padding: 15px;
+text-align: center;
+position: relative;
+top: 66%;
+left: 56.5%;
+}
+
+.img-tag h2{
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.img-tag h1{
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
