--- a/Style/style.css
+++ b/Style/style.css
@@ -728,19 +728,19 @@ form .submit-btn {
     background-size: cover;
 }
 
-.img-tag{
+.img-tag {
     width: 43%;
     border-radius: 16px;
-background: #FF5400;
-transform: rotate(-19.628deg);
-padding: 15px;
-text-align: center;
-position: relative;
-top: 66%;
-left: 56.5%;
+    background: #FF5400;
+    transform: rotate(-19.628deg);
+    padding: 15px;
+    text-align: center;
+    position: relative;
+    top: 63%;
+    left: 54.5%;
 }
 
-.img-tag h2{
+.img-tag h2 {
     color: #FFF;
     text-align: center;
     font-family: Mulish;
@@ -749,7 +749,8 @@ left: 56.5%;
     font-weight: 400;
     line-height: normal;
 }
-.img-tag h1{
+
+.img-tag h1 {
     color: #FFF;
     font-family: Mulish;
     font-size: 32px;
@@ -757,3 +758,66 @@ left: 56.5%;
     font-weight: 800;
     line-height: normal;
 }
+
+/* letter section end */
+
+
+/* footer start  */
+footer {
+    margin-top: 100px;
+    background: rgba(19, 19, 24, 0.05);
+
+    padding: 5% 20% 2% 20%;
+
+
+}
+
+.footer-container {
+    margin: auto;
+}
+
+
+.footer-title {
+    
+    justify-content: center;
+
+}
+
+.footer-discription {
+    text-align: center;
+    margin: 25px 50px;
+}
+
+.footer-social-link {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    margin: 40px;
+}
+
+.footer-social-link img {
+    height: 35px;
+    width: 35px;
+}
+
+.footer-social-link a:hover{
+    transform: scale(1.1);
+}
+
+hr {
+    background: rgba(19, 19, 24, 0.10);
+}
+
+.copy-right {
+
+    color: #131318;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-align: center;
+    margin: 50px;
+}
+
+/* footer end  */
