--- a/Style/style.css
+++ b/Style/style.css
@@ -57,7 +57,6 @@ body {
 
     max-width: 1440px;
     margin: auto;
-    border: solid red 3px;
     padding-top: 10px;
 
     font-family: 'Mulish', sans-serif;
@@ -68,7 +67,7 @@ header {
     width: 80%;
     margin: auto;
     position: relative;
-  
+
 }
 
 nav {
@@ -77,7 +76,7 @@ nav {
     justify-content: space-between;
 
     position: sticky;
-    top: 0; 
+    top: 0;
     z-index: 100;
     background-color: #FFF;
     align-items: center;
@@ -85,10 +84,7 @@ nav {
 }
 
 
-.navbar {
-
-  
-}
+.navbar {}
 
 .navbar ul {
     list-style: none;
@@ -265,7 +261,7 @@ button {
 main {
     width: 80%;
     margin: auto;
-    border: solid green 3px;
+  
 }
 
 
@@ -556,6 +552,143 @@ main {
 
 /* choose section end  */
 
+
+/* package section start  */
+.package-section {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+}
+
+.package-title {
+    color: #131318;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+
+.package-discription {
+
+    width: 60%;
+    margin: 16px auto;
+    text-align: center;
+}
+
+
+.package-box {
+    display: flex;
+    justify-content: flex-end;
+
+    padding: 4%;
+    background-image: url('../Images/Group\ 39.png');
+    border-radius: 16px;
+}
+
+#package-box2 {
+    background-image: url('../Images/Group\ 40.png');
+    justify-content: flex-start;
+}
+
+.price-card {
+    width: 60%;
+    border-radius: 16px;
+    background: rgba(255, 255, 255, 0.80);
+
+    backdrop-filter: blur(2.5px);
+    padding: 40px;
+
+
+}
+
+.card-condition{
+display: flex;
+margin: 20px 0;
+
+}
+
+.card-condition img{
+width: 24px;
+
+height: 24px;
+margin-right: 4px;
+}
+.card-condition p{
+
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    margin-right: 12px;
+}
+
+.price-card h1 {
+    color: #131318;
+    font-family: Mulish;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.price-card-para{
+    margin: 16px 0;
+  
+}
+
+.price-card .pricing {
+
+    color: #FF5400;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+
+.price-card {}
+
+.price-btn {
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    margin: 25px 0px;
+
+    color: #FFF;
+
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+.package-btn{
+    color: #FFF;
+
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+
+
+
+
+/* package section end  */
+
+
 /* traveler section start */
 
 .happy-traveler {
@@ -581,9 +714,9 @@ main {
 .traveler-card {
     display: flex;
     align-items: center;
-background-color:#dfe1e3;
+    background-color: #dfe1e3;
     margin: 40px auto;
-    padding:1px 5%;
+    padding: 1px 5%;
     border-radius: 15px;
 
 
@@ -596,9 +729,9 @@ background-color:#dfe1e3;
 
 .traveler-photo img {
     width: 100%;
-     padding: 5px;
-     border-radius: 50%;
-     border: solid rgb(157, 137, 137) 4px;
+    padding: 5px;
+    border-radius: 50%;
+    border: solid rgb(157, 137, 137) 4px;
 }
 
 
@@ -632,17 +765,17 @@ h3 {
 }
 
 
-.travel-btn{
+.travel-btn {
 
     color: #FFF;
-text-align: center;
-font-family: Mulish;
-font-size: 20px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-margin: auto;
-display: block;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin: auto;
+    display: block;
 }
 
 
@@ -694,7 +827,7 @@ display: block;
     margin: 16px 0px;
 }
 
-.demo-content button {
+.demo-content .demo-btn {
 
     width: 174px;
     height: 52px;
@@ -721,7 +854,6 @@ display: block;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid red 3px;
 }
 
 .demo-video video {
@@ -769,12 +901,10 @@ display: block;
     width: 40%;
     padding: 40px;
 
-    border: solid red 2px;
     border-radius: 16px;
 }
 
 .form-box form {
-    border-top: solid 3px rgba(19, 19, 24, 0.10);
 
 
 }
@@ -850,7 +980,7 @@ form .submit-btn {
     color: #FFF;
     text-align: center;
     font-family: Mulish;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -859,7 +989,7 @@ form .submit-btn {
 .img-tag h1 {
     color: #FFF;
     font-family: Mulish;
-    font-size: 32px;
+    font-size: 28px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
